Increase favicon resolution and add meta tags for link previews

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
 		<meta name="theme-color" content="#000000" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Sudoku by Philip Fulgham</title>
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@PhilipF5_" />
+		<meta name="twitter:title" content="Sudoku by Philip Fulgham" />
+		<meta name="twitter:description" content="Sudoku web game powered by React" />
+		<meta name="twitter:image" content="%PUBLIC_URL%/favicon.png" />
+		<meta name="twitter:image:alt" content="Sudoku App logo" />
+		<meta property="og:title" content="Sudoku by Philip Fulgham" />
+		<meta property="og:image" content="%PUBLIC_URL%/screenshot.png" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
